# xlcomm

./: .gitignore  C++ Style Guide.md  C++StyleGuide.md  CMakeLists.txt  README.md  build.bat  build.sh
automation/cross_env/: linux_amd64.sh
automation/linux/: README.md
automation/linux/makefile.dep/: makefile.template.common.dep  makefile.template.common.dll.dep  makefile.template.common.exe.dep  makefile.template.final.dep
src/: build.sh  xlcomm.sln  xlcomm_define.h
src/base/: base.vcxproj  base.vcxproj.filters  count_down_latch.cc  i_base.h  i_thread.h  xlbase.vcxproj  xlbase.vcxproj.filters  xlbase_define.h
src/base/thread/: count_down_latch.cc  count_down_latch.h
src/test/: test.vcxproj  test.vcxproj.filters
src/test/base/: test01.cc  thread_test.cc
src/test/makefile.build/: Makefile  Makefile.this.project.dep  README.md  build.sh
src/xlbase/: README.md  i_xlbase.h  xlbase.vcxproj
src/xlbase/makefile.build/: Makefile  Makefile.this.project.dep
src/xlbase/thread/: count_down_latch.cc  count_down_latch.h
xlcomm/: xlcomm_define.h
xlcomm/base/: CMakeLists.txt  count_down_latch.cc  count_down_latch.h
xlcomm/base/test/: CMakeLists.txt  thread_test.cc
